# ai-guardian

./: .env.example  .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PENDING_DECISIONS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  detection_pattern.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  zenn-deploy-trigger.yml
ai_guardian/: __init__.py  activity.py  adversarial_loop.py  auto_fix.py  badge.py  benchmark.py  cli.py  compliance.py  decoders.py  guard.py  mcp_scanner.py  patterns.py  policy.py  redteam.py  scanner.py  similarity.py  types.py
ai_guardian/adapters/: __init__.py  claude_code.py
ai_guardian/aep/: __init__.py  pipeline.py  sandbox.py  vaporizer.py
ai_guardian/audit/: __init__.py  chain.py  signed_log.py  verify.py
ai_guardian/capabilities/: __init__.py  enforcer.py  policy_bridge.py  store.py  taint.py
ai_guardian/cross_session/: __init__.py  correlator.py  sleeper.py  store.py
ai_guardian/filters/: __init__.py  input_filter.py  output_filter.py  patterns.py  scorer.py
ai_guardian/memory/: __init__.py  integrity.py  scanner.py
ai_guardian/middleware/: __init__.py  anthropic_proxy.py  fastapi.py  langchain.py  langgraph.py  openai_proxy.py
ai_guardian/monitor/: __init__.py  anomaly.py  baseline.py  drift.py  monitor.py
ai_guardian/multi_agent/: __init__.py  message_scanner.py  topology.py
ai_guardian/policies/: __init__.py  manager.py
ai_guardian/safety/: __init__.py  builtin_specs.py  loader.py  verifier.py
ai_guardian/spec_lang/: __init__.py  defaults.py  evaluator.py  parser.py  stdlib.py
ai_guardian/supply_chain/: __init__.py  hash_pin.py  sbom.py  verify.py
articles/: ai-guardian-v2-beyond-pattern-matching.md  ai-guideline-v12-checklist-37.md  claude-code-cicd-pypi-oss.md  claude-code-skills-automation.md  claude-mythos-enterprise-security.md  guideline-v12-what-companies-must-do.md  japanese-llm-security-gaps.md  llm-security-tools-comparison-2026.md  mcp-server-trust-scoring.md  mcp-tool-poisoning-defense.md
backend/: render.yaml
backend/app/: __init__.py  config.py  main.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py
books/ai-agent-security-governance/: 03-owasp-agentic-top10.md  04-prompt-injection.md  05-mcp-security.md  06-nhi-and-zerotrust.md  07-multi-agent-security.md  08-sandbox-and-code-execution.md  09-governance-structure.md  10-human-in-the-loop.md  11-audit-and-observability.md  12-red-teaming.md  13-enterprise-roadmap.md  14-real-world-incidents.md  15-supply-chain-security.md  16-legal-liability.md  17-agi-governance.md  RESTRUCTURE_PLAN.md
content/: PDCA_Schedule.xlsx  awesome_list_pr_drafts.md  growth_strategy.md  marketing_strategy.md  product_hunt_launch.md  product_hunt_strategy.md  qiita_draft.md  saas_monetization_design.md  show_hn_draft.md  show_hn_post.md  sns_profiles.md  twitter_posts.md  zenn_draft.md
content/articles/: 20260328_claude_code_full_automation.md  20260329_mcp_security_qiita.md  20260329_mcp_trust_model_zenn.md  20260330_a2a_security.md  20260330_ai_memory_poisoning.md  20260330_claude_code_apt.md  20260330_echoleak.md  20260330_mcp_rugpull.md  20260330_mic_ai_security_guideline.md  20260330_nhi_claude_code.md  20260330_owasp_agentic_top10.md  20260401_agent_authority_failure_zenn.md  20260401_coding_agent_security_qiita.md  20260402_singapore_agentic_ai_governance.md  20260406_guideline_v12_compliance.md  20260406_langchain_security_devto.md  20260406_mcp_injection_rate_devto.md  20260410_mythos_preview_security_devto.md  20260410_mythos_preview_security_qiita.md  awesome_list_submissions.md  devto_draft.md  devto_llm_security_tools_comparison_2026.md  devto_mcp_server_trust_scoring.md  post_log.md  reddit_drafts.md  zenn_ai_agent_security_landscape.md  zenn_claude_code_team_governance.md  zenn_guideline_checklist.md  zenn_hook_troubleshooting.md  zenn_litellm_supply_chain.md
content/marketing/: discord_slack_posts.md  hn_show_hn.md  ph_launch_copy.md  reddit_posts.md  x_launch_day_posts.md  x_thread_mcp_security.md
content/monthly_reviews/: 2026-03_monthly_review.md
content/ph_comments/: 2026-04-06.md
content/weekly_reports/: 2026-03-29_weekly_report.md  2026-04-06_weekly_report.md  weekly-2026-03-30.md
content/weekly_x_drafts/: 2026-03-28_x_drafts.md  2026-04-04_x_drafts.md  book_launch_posts.md  post_log.md
docs/: DEV_LOOP.md  api-reference.md  competitive-analysis-2026-04.md  competitive-pricing-analysis.md  configuration.md  getting-started.md  human-in-the-loop.md  middleware.md
docs/compliance/: CSA_STAR_AI_SELF_ASSESSMENT.md  (+4 more)
examples/: README.md  basic_usage.py  custom_policy.py  fastapi_integration.py  langchain_integration.py  langgraph_integration.py  openai_proxy.py  pre-commit-config-example.yaml
frontend/: DESIGN.md  package-lock.json  package.json  tailwind.config.ts
policy_templates/: README.md  customer_support.yaml  developer_tools.yaml  ecommerce.yaml  education.yaml  finance.yaml  healthcare.yaml  internal_tools.yaml
public/: ai-guideline-v12-checklist.md  guideline-v12-what-companies-must-do.md  mcp-tool-poisoning-defense.md
site/: blog.html  index.html  package-lock.json  package.json
tests/: test_activity.py  test_adversarial.py  test_adversarial_loop.py  test_aep.py  test_anthropic_proxy.py  test_audit.py  test_auto_fix.py  test_badge.py  test_behavioral_monitor.py  test_benchmark.py  test_claude_code_adapter.py  test_compliance.py  test_cross_session.py  test_decoders.py  test_filters.py  test_guard.py  test_jailbreak_patterns.py  test_langgraph.py  test_mcp_scanner.py  test_memory_poisoning.py  test_middleware.py  test_multi_agent.py  test_policy.py  test_prompt_leak_patterns.py  test_scanner.py  test_second_order.py  test_spec_lang.py  test_supply_chain.py  test_types.py
vscode-extension/: README.md  VSCODE_EXTENSION_DESIGN.md  package.json
(+71 files in other folders)
