[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aig-guardian"
version = "0.3.0"
description = "AI Guardian — Agent governance platform. Detect threats, enforce policies, audit operations across any AI agent. From LLM security to AGI-era governance."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AI Guardian Team" },
]
keywords = ["ai", "security", "llm", "prompt-injection", "guardrails", "agent-governance", "ai-agent"]

[project.scripts]
aig = "ai_guardian.cli:main"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/ai-guardian/ai-guardian"
Documentation = "https://ai-guardian-mauve.vercel.app/docs"
Repository = "https://github.com/ai-guardian/ai-guardian"

[tool.hatch.build.targets.wheel]
packages = ["ai_guardian"]
