[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-guardian"
version = "0.4.0"
description = "Protect your LLM application from prompt injection, PII leaks, and jailbreaks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "llm", "security", "prompt-injection", "ai-safety",
    "pii", "jailbreak", "guardrails", "owasp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero required dependencies for the core library
dependencies = []

[project.optional-dependencies]
# YAML-based policy files
yaml = ["pyyaml>=6.0"]

# FastAPI / Starlette middleware
fastapi = ["fastapi>=0.115.0", "starlette>=0.41.0"]

# LangChain callback
langchain = ["langchain-core>=0.1.0"]

# OpenAI proxy wrapper
openai = ["openai>=1.0.0"]

# Full SaaS server (backend + all integrations)
server = [
    "ai-guardian[yaml,fastapi,openai]",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
]

# Everything
all = ["ai-guardian[yaml,fastapi,langchain,openai]"]

# Development
dev = [
    "ai-guardian[all]",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
aig = "ai_guardian.cli:main"

[project.urls]
Homepage = "https://github.com/killertcell428/ai-guardian"
Documentation = "https://github.com/killertcell428/ai-guardian#readme"
Issues = "https://github.com/killertcell428/ai-guardian/issues"
Changelog = "https://github.com/killertcell428/ai-guardian/releases"

[tool.hatch.build.targets.wheel]
packages = ["ai_guardian"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
