[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aig-guardian"
version = "0.8.0"
description = "Zero-dependency LLM security middleware: prompt injection, jailbreak, PII detection with OWASP LLM Top 10 coverage. Integrates with FastAPI, LangChain, OpenAI, Anthropic."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "llm", "security", "prompt-injection", "ai-safety",
    "pii", "jailbreak", "guardrails", "owasp",
    "ai-agent", "governance", "middleware", "fastapi",
    "langchain", "openai", "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
]
# Zero required dependencies for the core library
dependencies = []

[project.optional-dependencies]
# YAML-based policy files
yaml = ["pyyaml>=6.0"]

# FastAPI / Starlette middleware
fastapi = ["fastapi>=0.115.0", "starlette>=0.41.0"]

# LangChain callback
langchain = ["langchain-core>=0.1.0"]

# OpenAI proxy wrapper
openai = ["openai>=1.0.0"]

# Anthropic SDK integration
anthropic = ["anthropic>=0.20.0"]

# Full SaaS server (backend + all integrations)
server = [
    "aig-guardian[yaml,fastapi,openai]",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "stripe>=8.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
]

# Everything
all = ["aig-guardian[yaml,fastapi,langchain,openai,anthropic]"]

# Development
dev = [
    "aig-guardian[all]",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
aig = "ai_guardian.cli:main"

[project.urls]
Homepage = "https://github.com/killertcell428/ai-guardian"
Documentation = "https://github.com/killertcell428/ai-guardian#readme"
Issues = "https://github.com/killertcell428/ai-guardian/issues"
Changelog = "https://github.com/killertcell428/ai-guardian/releases"

[tool.hatch.build.targets.wheel]
packages = ["ai_guardian"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Remediation hint strings in pattern files are intentionally long for readability.
# Test files may also have long assertion messages.
per-file-ignores = { "ai_guardian/filters/patterns.py" = ["E501"], "ai_guardian/patterns.py" = ["E501"], "ai_guardian/similarity.py" = ["E501"], "ai_guardian/badge.py" = ["E501"], "ai_guardian/cli.py" = ["E501", "F401"], "ai_guardian/activity.py" = ["E501"], "ai_guardian/compliance.py" = ["E501"], "ai_guardian/scanner.py" = ["E501"], "tests/*.py" = ["E501"] }

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# Disable type-arg checks globally — Pattern[str] vs Pattern, dict vs dict[K,V]
# is not consistently used in the codebase and fixing it is a large refactor.
disallow_any_generics = false

# The [[tool.mypy.overrides]] section with ignore_errors = true has been
# removed.  All 9 legacy modules now have proper type annotations.
